--- a/de/ocrd_ocrd.ditamap
+++ b/de/ocrd_ocrd.ditamap
@@ -125,7 +125,10 @@
             <topicref href="trans/trFremdsprache.dita"/>
             <topicref href="trans/trLigaturen2.dita"/>
         </topicref>
-        <topicref href="trans/hilfsmittel.dita"/>
+    </chapter>
+    <chapter href="trans/hilfsmittel.dita">
+        <topicref href="trans/trTrans.dita"/>
+        <topicref href="trans/trLevelparser.dita"/>
     </chapter>
     <chapter href="trans/layout.dita">
         <topicref href="trans/lyAllgemein.dita"/>
