--- a/de/trans/hilfsmittel.dita
+++ b/de/trans/hilfsmittel.dita
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="hilfsmittel">
-    <title>Hilfsmittel</title>
+    <title>&#x1F527; Hilfsmittel</title>
     <body>
-        <p>Für die Eingabe von Zeichen, die nicht auf der Tastatur vorhanden sind, bieten
-            Transkriptionsprogramme häufig virtuelle Tastaturen an. Für die gängigen Programme wie
-            Aletheia, Transkribus, LAREX, QURATOR-neat und eScriptorium finden Sie unter keyboardGT
-            verschiedene virtuelle Tastaturen für die Eingabe von Zeichen, beispielsweise für
-            Griechisch.</p>
-        <p>Alternativ können Sie aber auch die virtuelle Tastatur Ihres Windows- oder
-            MacOS-Betriebssystems nutzen.</p>
-        <ul id="ul_uz3_pq1_tzb">
-            <li>So öffnen Sie die virtuelle Tastatur unter Windows: Drücken Sie die
-                Windows-Logo-Taste und den Punkt (.) gleichzeitig.</li>
-            <li>So öffnen Sie die virtuelle Tastatur unter MacOS (Apple): Drücken Sie die
-                Funktionstaste (Fn) und die Taste E oder die Globustaste (⌃ + ⌘ + Leertaste)
-                gleichzeitig.</li>
-        </ul>
-        <p><b>Tastenkombinationen in Windows</b></p>
-        <ul id="ul_zhq_4p1_tzb">
-            <li><xref
-                href="https://support.microsoft.com/de-de/windows/windows-tipps-und-tricks-zur-tastatur-588e0b72-0fff-6d3f-aeee-6e5116097942"
-                format="html" scope="external">Windows Tipps und Tricks zur Tastatur</xref></li>
-            <li><xref
-                    href="https://support.microsoft.com/de-de/windows/tastenkombinationen-in-windows-dcc61a57-8ff0-cffe-9796-cb9706c75eec?ocid=prod_core_cons_marvel_dg_tipsapp_shortcutemoji"
-                    format="html" scope="external">Tastenkombinationen in Windows</xref></li>
+        <p>Für die Erstellung von Ground Truth (GT), die Eingabe sowie Konvertierung von Zeichen oder für die
+            Überprüfung des GT können verschiedene Werkzeuge genutzt werden. </p>
+        <p>Für die Erstellung bieten sich folgende von Werkzeugen (Auswahl) an: <ul
+                id="ul_kyv_4xm_vzb">
+                <li>Aletheia</li>
+                <li>eScriptorium</li>
+                <li>Transkribus</li>
+                <li>OCR4all/LAREX</li>
+            </ul>
+        </p>
+        <p>Für die Eingabe von Zeichen, die nicht auf der Tastatur vorhanden sind, bieten die
+            Erstellungswerkzeuge und das genutzte Betriebssystem in den meisten Fällen virtuelle
+            Tastaturen an.</p>
+        <p>Für die Eingabe bietet an: <ul id="ul_kyv_4xm_vzba">
+                <li><xref href="https://github.com/tboenig/keyboardGT" format="html"
+                        scope="external">KeybordGT</xref></li>
+                <li>virtuelle Tastaturen in MacOS und Windows</li>
+            </ul></p>
+        <p>Für die Konvertierung bietet sich Folgendes an:
+            <ul id="ul_kyv_4xm_vzbc">
+                <li><xref href="https://github.com/ponteIneptique/choco-mufin" format="html"
+                        scope="external">Choco-Mufin [CHaracter Ocr COordination for MUFI iN
+                        texts]</xref></li>
+                
+            </ul></p>
             
-        </ul>
-        <p><b>Mac-Tastaturkurzbefehle (Apple)</b></p>
-        <ul id="ul_lt2_pp1_tzb">
-            <li><xref href="https://support.apple.com/de-de/guide/mac-help/mchlp1560/mac"
-                    format="html" scope="external">Verwenden von Symbolen auf dem Mac</xref></li>
-            <li><xref href="https://support.apple.com/de-de/HT201236" format="html" scope="external"
-                >Mac-Tastaturkurzbefehle</xref></li>
-        </ul>
+        <p>Die Überprüfung des GT kann auf verschiedenen Ebenen erfolgen. 
+            Es können Validierungen auf der syntaktischen XML-Ebene gegen das PAGE-XML-Schema sowie auf der 
+            semantischen Ebene basierend auf Regeln (unter anderem den OCR-D-GT-Guidelines, Level-Rules) durchgeführt werden.</p>
+        <p>Für die Überprüfung bietet sich an: <ul id="ul_kyv_4xm_vzbd">
+                <li><xref href="https://github.com/tboenig/gt-MufiLevelRules" format="html"
+                        scope="external">gt-MufiLevelRules</xref></li>
+                <li><xref href="https://tboenig.github.io/gt-guidelines/html/trans/ruleset.html"
+                        format="html" scope="external">gt-guidelines Ruleset</xref></li>
+                <li><xref href="https://github.com/tboenig/gt-LevelParser" format="html"
+                        scope="external">gt-LevelParser</xref> (in Vorbereitung)</li>
+                <li><xref href="https://www.primaresearch.org/tools/PAGEConverterValidator"
+                        format="html" scope="external">PAGE Converter and Validator</xref></li>
+            </ul></p>
+        
+       
         
     </body>
 </topic>
