--- a/de/trans/index.dita
+++ b/de/trans/index.dita
@@ -24,6 +24,8 @@
         <link href="trLabeling.dita"/>
         <link href="trPage.dita"/>
         <link href="page_xml_erweiterungen.dita"/>
+        <link href="hilfsmittel.dita"/>
+        <link href="ruleset.dita"/>
         <link href="fa.dita"/>
         </linklist>
     </related-links>
