--- a/de/trans/ruleset.dita
+++ b/de/trans/ruleset.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="ruleset">
-    <title>OCR-D-GT-Ruleset</title>
+    <title>&#x1F3DB; OCR-D-GT-Ruleset</title>
     <body>
         <p>Das OCR-D-GT-Ruleset ist ein Regelsatz, der verschiedene Schreibweisen von Buchstaben in
             verschiedenen Level der Transkription dokumentiert. Es sind drei Level vorgesehen: <ul
@@ -29,7 +29,7 @@
             }
             </codeblock>
         <p>Das OCR-D-GT-Ruleset wird im JSON-Format gespeichert.</p>
-        <p>Das OCR-D-GT-Ruleset-JSON-Schema entspicht der Version 2020-12.</p>
+        <p>Das OCR-D-GT-Ruleset-JSON-Schema entspricht der Version 2020-12.</p>
         <ul> 
         <li><xref href="https://github.com/tboenig/gt-guidelines/schema/OCR-D-GT-levelSchema.json"
                 format="html" scope="external">OCR-D-GT-Ruleset-JSON-Schema</xref></li>
